# Computer-Use

./: .env  .env.example  .gitignore  AUDIT_COMPUTER_USE.md  README.md  document.md  error_log.txt  pyproject.toml  remove-duplicate.bat  requirements.asr.txt  requirements.browser-use.txt  requirements.tts.txt  requirements.txt  setup_wsl_vllm.sh  start_agent.bat  start_local_models.bat  start_voice_agent.bat  task.md  test.js
artifacts/reference/: conversation-2.json  conversation.json
bridges/: asr_server.py  tts_server.py
computer-use-finetuning/: README.md  installation.txt  requirements.txt
computer-use-finetuning/datasets/: imatrix.txt
computer-use-finetuning/notebooks/: [Checkpoint_Resume]_train_qwen_tool_use_Qwen3.5-9B.ipynb  [Original]train_qwen_tool_use_Qwen3.5-9B.ipynb  train_qwen_tool_use_Qwen3_5_27B-A100-SXM.ipynb  (+1 more)
docs/: DEPLOYMENT.md  roo_task_jun-18-2026_11-05-39-am.md
logs/: command_history.jsonl  stress_test_report.json
scratch/: test_model_direct.py
scripts/: .env  setup.bat  setup.sh  start.bat  start.sh
src/: capture_service.py  config.py  hybrid_server.py  mcp_complex_prompt_llm.py  mcp_utils.py  overlay.py  run_agent.py  run_complex_mcp_prompt.py  server.py  speech_processor.py  ui_elements.py  voice_pipeline.py  voice_server.py
tests/: conftest.py  mock_dashboard.html  stress_test_suite.py  test_accuracy.py  test_config.py  test_integration.py  test_mcp_coordinates.py  test_mcp_full_smoke.py  test_server_security.py  test_ui_elements.py  verify_hybrid_tools.py  verify_tools.py  voice_client.html
(+5 files in other folders)
