[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oi-computer-use-mcp"
version = "1.0.0"
description = "Universal Open Interpreter Computer-Use MCP Server"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "fastmcp>=0.4.0",
    "uvicorn>=0.22.0",
    "starlette>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyautogui>=0.9.54",
    "mss>=9.0.0",
    "pillow>=10.0.0",
    "playwright>=1.35.0",
    "huggingface-hub>=0.16.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
win32 = [
    "pywin32>=306; platform_system == 'Windows'",
    "uiautomation>=2.0.0; platform_system == 'Windows'",
]

[project.scripts]
oi-computer-use = "server:main"
